gcc/testsuite/rust/rustc/ui/borrowck/borrowck-issue-2657-2.rs
#![feature(box_syntax)]

fn main() {
    let x: Option<Box<_>> = Some(box 1);
    match x {
      Some(ref y) => {
        let _b = *y; // { dg-error ".E0507." "" { target *-*-* } }
      }
      _ => {}
    }
}

